fix(css): suppress line breaks in continue link

--- a/style.css
+++ b/style.css
@@ -482,7 +482,7 @@ a.continue {
 }
 
 .continue::after {
-  content: " ➔";
+  content: "\00a0➔";
 }
 
 /* Article meta */
